2009-03-27  Sanel <karijes@users.sourceforge.net>

	* src/IconChooser.cpp: some refactoring, use Fl_Double_Window
	* edelib/IconChooser.h: todo how it needs to be rewritten

2009-03-25  Sanel <karijes@users.sourceforge.net>

	* src/IconLoader.cpp: let get() check fallback icon too; some sanity
	checks
	* edelib/IconLoader.h: document get() behaviour
	* edelib/IconLoader.h: document how to get image object
	* src/IconLoader.cpp: remove previous image from Fl_Shared_Image cache
	whem icon theme was reloaded; some stats output
	* src/IconTheme.cpp: removed debug output when go in 'hicolor' theme
	* edelib/String.h: small documentation revision
	* edelib/String.h:
	* src/String.cpp:
	* test/string.cpp: added trim_left(), trim_right(), trim() function with
	the tests
	* src/IconTheme.cpp: updated to use trim() function
	* edelib.pc.in: added edelibdocdir variable; it will have full path to
	edelib documentation directory
	* src/icon/*: updated to gtk icons
	* src/MessageBox.cpp: use question icon where is needed

2009-03-24  Sanel <karijes@users.sourceforge.net>

	* edelib/IconTheme.h: default_theme_name() added
	* edelib/IconLoader.h: plain init() used default_theme_name()
	* src/Window.cpp: DEFAULT_ICON_THEME replaced with default_theme_name()
	* edelib/IconLoader.h:
	* src/IconLoader.cpp: let IconLoader tries to directly load icon, then use
	IconTheme
	* src/IconLoader.cpp: removed checks if Fl_Shared_Image::get() fails;
	image() will get NULL and widget will remove previous image, drawing
	nothing; this behaviour is desired since image is not found anyway

2009-03-23  Sanel <karijes@users.sourceforge.net>

	* edelib/Window.h: small clarification about XSETTINGS callback;
	documented XSETTINGS keys
	* edelib/IconLoader.h:
	* src/IconLoader.cpp: added parameter for widget redrawing in set()
	* edelib/IconLoader.h: some documentation update
	* src/MimeType.cpp: use new xdgmime's icon lookup feature in fetching icon
	name, refactored icon fetcher to not use stringtok()