@@ -51,6 +51,7 @@ SOURCE =
 	Nls.cpp
 	String.cpp
 	File.cpp
+	FileTest.cpp
 	DateTime.cpp
 	Directory.cpp
 	Debug.cpp 
