@@ -1,0 +1,24 @@
+#include <edelib/FileTest.h>
+#include "UnitTest.h"
+
+EDELIB_NS_USE
+
+UT_FUNC(FileTest, "file_test()")
+{
+	UT_VERIFY( file_test("Jamfile", FILE_TEST_EXISTS) );
+	UT_VERIFY( file_test("Jamfile", FILE_TEST_IS_REGULAR) );
+	UT_VERIFY( file_test("Jamfile", FILE_TEST_IS_READABLE) );
+	UT_VERIFY( file_test("Jamfile", FILE_TEST_IS_WRITEABLE) );
+
+	UT_VERIFY( file_test("Jamfile", FILE_TEST_EXISTS | FILE_TEST_IS_READABLE | FILE_TEST_IS_WRITEABLE) );
+
+	UT_VERIFY( file_test("../", FILE_TEST_IS_DIR | 
+				FILE_TEST_IS_READABLE |
+				FILE_TEST_IS_WRITEABLE | 
+				FILE_TEST_IS_EXECUTABLE));
+
+	UT_VERIFY( file_test("../", FILE_TEST_IS_DIR | FILE_TEST_IS_REGULAR | FILE_TEST_EXISTS) == false );
+
+	UT_VERIFY( file_test("this-does-not-exists", FILE_TEST_EXISTS) == false );
+	UT_VERIFY( file_test("this-does-not-exists", FILE_TEST_IS_SOCKET) == false );
+}
